* Added O2PotionType enum * Lookup O2Potions class from enum * Removed using/referencing potions by string
https://github.com/Azami7/Ollivanders2/issues/171